Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-34288

SET NAMES DEFAULT crashes `mariadbd --collation-server=utf8mb4_unicode_ci`

    XMLWordPrintable

Details

    Description

      I start a debug-compiled server with some collation which is not default compiled collation in its character set, e.g.:

      mariadbd --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
      

      Then I run this statement:

      SET NAMES DEFAULT;
      

      The server crashed with the following stack:

      #0  0x00007ffff72ae834 in __pthread_kill_implementation () from /lib64/libc.so.6
      #1  0x00007ffff725c8ee in raise () from /lib64/libc.so.6
      #2  0x00007ffff72448ff in abort () from /lib64/libc.so.6
      #3  0x00007ffff724481b in __assert_fail_base.cold () from /lib64/libc.so.6
      #4  0x00007ffff7254c57 in __assert_fail () from /lib64/libc.so.6
      #5  0x0000555555f9834d in Lex_exact_charset_opt_extended_collate::Lex_exact_charset_opt_extended_collate (this=0x7ffff7008620, 
          ci=0x555557c58360 <my_charset_utf8mb4_unicode_ci>, with_collate=false)
          at /home/bar/maria-git/10.11.names/sql/lex_charset.h:335
      #6  0x000055555636b20a in MYSQLparse (thd=0x7fff8c000dc8)
          at /home/bar/maria-git/10.11.names/sql/sql_yacc.yy:16675
      #7  0x0000555556026e18 in parse_sql (thd=0x7fff8c000dc8, parser_state=0x7ffff7009320, 
          creation_ctx=0x0, do_pfs_digest=true)
          at /home/bar/maria-git/10.11.names/sql/sql_parse.cc:10437
      #8  0x000055555602150e in mysql_parse (thd=0x7fff8c000dc8, 
          rawbuf=0x7fff8c016770 "SET NAMES DEFAULT", length=17, parser_state=0x7ffff7009320)
          at /home/bar/maria-git/10.11.names/sql/sql_parse.cc:8078
      #9  0x000055555600cc6d in dispatch_command (command=COM_QUERY, thd=0x7fff8c000dc8, 
          packet=0x7fff8c00bb49 "SET NAMES DEFAULT", packet_length=17, blocking=true)
          at /home/bar/maria-git/10.11.names/sql/sql_parse.cc:1895
      #10 0x000055555600b5c6 in do_command (thd=0x7fff8c000dc8, blocking=true)
          at /home/bar/maria-git/10.11.names/sql/sql_parse.cc:1408
      #11 0x0000555556201b57 in do_handle_one_connection (connect=0x555558d892f8, 
          put_in_cache=true) at /home/bar/maria-git/10.11.names/sql/sql_connect.cc:1417
      #12 0x00005555562018cc in handle_one_connection (arg=0x555558d892f8)
          at /home/bar/maria-git/10.11.names/sql/sql_connect.cc:1319
      #13 0x0000555556739dd2 in pfs_spawn_thread (arg=0x555558cb2b28)
          at /home/bar/maria-git/10.11.names/storage/perfschema/pfs.cc:2201
      #14 0x00007ffff72ac897 in start_thread () from /lib64/libc.so.6
      #15 0x00007ffff7333a5c in clone3 () from /lib64/libc.so.6
      

      Attachments

        Issue Links

          Activity

            People

              bar Alexander Barkov
              bar Alexander Barkov
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 2.5h
                  2.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.